--- a/css/styles copy.css
+++ b/css/styles copy.css
@@ -2,7 +2,7 @@
 
 /* Fonts */
 /* Importar aquí la font */
-
+@import url('https://fonts.googleapis.com/css2?family=Lato:wght@400;700&display=swap');
 
 
 /* Aquí les dejamos como ayuda este "reset" en el cual ajustamos algunas propiedades
@@ -12,8 +12,8 @@
 /* Reset */
 * {
     box-sizing: border-box;
-    margin: 0;
-    padding: 0;
+    margin: 0 15;
+    padding: 0 15;
     /* Para que el scrolleo en la one page sea suave */
     scroll-behavior: smooth;
 }
@@ -32,10 +32,40 @@ a {
 /* Este max-width es para que el contenido no se "estire" demasiado hacia los costados y
 *  el margin: auto; para tenerlo centrado fácilmente ;)
 */
-main {
-    max-width: 1200px;
-    margin: auto;
-}
+header {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+  }
+  
+  .logo img {
+    height: 30px;
+    margin-right: 10px;
+  }
+  
+  nav {
+    font-family: 'Lato', sans-serif;
+    margin-left: 20px;
+  }
+  
+  ul {
+    list-style: none;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+
+  li {
+    margin: 0 15px;
+  }
+
+  a {
+    text-decoration: none;
+    color: black;
+  }
+  
+  
 
 /* Recomendaciones! 
 *  - Comenzar desde lo más general y luego ir hacia lo mas específico, asignando primero
