--- a/css/styles copy.css
+++ b/css/styles copy.css
@@ -12,8 +12,8 @@
 /* Reset */
 * {
     box-sizing: border-box;
-    margin: 0 15;
-    padding: 0 15;
+    margin: 0 40;
+    padding: 0 40;
     /* Para que el scrolleo en la one page sea suave */
     scroll-behavior: smooth;
 }
@@ -32,21 +32,27 @@ a {
 /* Este max-width es para que el contenido no se "estire" demasiado hacia los costados y
 *  el margin: auto; para tenerlo centrado fácilmente ;)
 */
+
 header {
+    height: 90px;
     display: flex;
     justify-content: center;
     align-items: center;
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
   }
   
+body {
+    background-color: #fbfbfb;
+}
+  
   .logo img {
-    height: 30px;
-    margin-right: 10px;
+    height: 50px;
+    margin-right: 0 20px;
   }
   
   nav {
     font-family: 'Lato', sans-serif;
-    margin-left: 20px;
+    margin-left: 0 15px;
   }
   
   ul {
@@ -64,8 +70,116 @@ header {
     text-decoration: none;
     color: black;
   }
+
+.seccion1 {
+    min-height: 100vh;
+    margin-bottom: 20px;
+  }
+
+.contenedor {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+
+.retrato img {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 400px;
+    height: 400px;
+    margin-top: 20px;
+    border-radius: 50%;
+    margin-bottom: 20px;
+}
+
+h1 {
+    font-size: 36px;
+    font-family: 'Lato', sans-serif;
+    font-weight: 700;
+    text-align: center;
+    color: #0f0f0f;
+}  
+
+h2 {
+    font-size: 28px;
+    font-family: 'Lato', sans-serif;
+    font-weight: 700;
+    text-align: center;
+    color: #0f0f0f;
+}  
+
+h3 {
+    font-size: 15px;
+    font-family: 'Lato', sans-serif;
+    font-weight: 400;
+    text-align: center;
+    color: white;
+}
+
+p {
+    font-size: 18px;
+    font-family: 'Lato', sans-serif;
+    font-weight: 400;
+    line-height: 1.2;
+    text-align: center;
+    color: #0f0f0f;
+}   
+
+.descarga {
+display: flex;
+justify-content: center
+}
+
+.CV {
+    margin-top: 10px;
+    padding: 8px 20px;
+    border-radius: 30px;
+    background-color: #af599e;
+    color: #fbfbfb;
+    font-family: 'Lato', sans-serif;
+    font-size: 20px;
+    font-weight: 400;
+    text-align: center;
+    border: none;
+    margin-bottom: 30px;
+  }
   
+.seccion2 {
+    min-height: 100vh;
+  }
   
+.rectangulo {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: rgba(175, 89, 158, 0.3);
+    border-radius: 20px;
+    padding: 10px;
+    margin-bottom: 20px;
+  }
+
+.redes {
+    display: flex;
+    justify-content: center
+}
+
+.iconos img {
+    display: inline-block;
+    width: 20vw; 
+    max-width: 50px; 
+    margin: 0 30px;
+    margin-top: 10px;
+    margin-bottom: 20px;
+    }
+    
+footer {
+    height: 90px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: #af599e;
+}
 
 /* Recomendaciones! 
 *  - Comenzar desde lo más general y luego ir hacia lo mas específico, asignando primero
